# Hermes-Offline

./: .gitignore  agent.md  pyproject.toml
hermes-offline/: README.md  install-windows.bat  install-windows.ps1  pyproject.toml
hermes-offline/config/: offline-defaults.yaml
hermes-offline/hermes_offline/: __init__.py  beam_memory.py  benchmark.py  compat_matrix.py  compressor.py  detector.py  dspy_local.py  embeddings.py  entrypoint.py  evolution.py  hardware.py  hermeshub_skill.py  local_search.py  memory.py  modelfile.py  patch.py  profiler.py  providers.py  searxng.py  setup.py  sitecustomize.py  test_parity.py  think.py  tool_stream.py  tracker.py  tracker_tui.py  updater.py
hermes-offline/hermes_offline/modelfiles/: llama31-8b-agent.Modelfile  qwen3-1.7b-agent.Modelfile  qwen3-4b-agent.Modelfile  qwen3-8b-agent.Modelfile
hermes-offline/scripts/: apply-modelfile.sh  check-windows.ps1  install-embeddings.sh  setup-offline.sh
